# Aboba

./: Cargo.toml  Rocket.toml
src/: main.html  main.rs
static/css/: main.css
static/html/: info.html  main.html
